--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,5 +1,11 @@
 #container{
-	background: gray;
+	border: 2px solid gray;
 	width: 360px;
 	margin: 0 auto;
+}
+
+.selected {
+	color: gray;
+	text-decoration: line-through;
+	opacity: 0.6;
 }
